Separated the parser. Updated the Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,22 @@
-.PHONY: all clean
+.PHONY: clean
 
-all: parser
+# Declaration of variables
+CC = g++
+CC_FLAGS = -std=c++17 -Wall -Wextra -Wfatal-errors -g
 
-parser:
-	g++ -std=c++17 -Wall -Wextra -Wfatal-errors -g -o parser parser.cpp
+# File names
+EXEC = proj1
+SOURCES = $(wildcard *.cpp)
+OBJECTS = $(SOURCES:.cpp=.o)
 
+# Main target
+$(EXEC): $(OBJECTS)
+	$(CC) $(OBJECTS) -o $(EXEC)
+
+# To obtain object files
+%.o: %.cpp
+	$(CC) -c $(CC_FLAGS) $< -o $@
+
+# To remove generated files
 clean:
-	rm -f *.o parser
+	rm -f $(EXEC) $(OBJECTS)
