--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 # Declaration of variables
 CC = g++
 CC_FLAGS = -std=c++17 -Wall -Wextra -Wfatal-errors -Wno-unused-parameter -g \
-					 -I../include
+					 -Wno-unused-variable -I../include
 
 # File names
 EXEC = proj1
