--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@
 # Declaration of variables
 CC = g++
 CC_FLAGS = -std=c++17 -Wall -Wextra -Wfatal-errors -Wno-unused-parameter -g \
-					 -Wno-unused-variable -I../include
+					 -Wno-unused-variable -I../include -I.. -I./ -I./minisat \
+					 -Wno-literal-suffix -Wno-parentheses
 
 # File names
 EXEC = proj1
@@ -12,7 +13,8 @@ OBJECTS = $(SOURCES:.cpp=.o)
 
 # Main target
 $(EXEC): $(OBJECTS)
-	$(CC) $(OBJECTS) -o $(EXEC)
+	(cd minisat/core; make)
+	$(CC) $(OBJECTS) minisat/core/Solver.o -o $(EXEC)
 
 # To obtain object files
 %.o: %.cpp
@@ -20,4 +22,4 @@ $(EXEC): $(OBJECTS)
 
 # To remove generated files
 clean:
-	rm -f $(EXEC) $(OBJECTS)
+	rm -f $(EXEC) $(OBJECTS) minisat/core/*.o minisat/utils/*.o minisat/core/depend.mk minisat/core/minisat
