Updated test makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,8 +2,9 @@
 
 # Declaration of variables
 CC = g++
-CC_FLAGS = -std=c++17 -Wall -Wextra -Wfatal-errors -Wno-unused-parameter -g \
-					 -Wno-unused-variable -I../include
+CC_FLAGS = -std=c++17 -Wall -Wextra -Wfatal-errors -Wno-unused-parameter -O3 \
+					 -Wno-unused-variable -I../include -I.. -I./ -I../src/minisat -I../src \
+					 -Wno-literal-suffix -Wno-parentheses
 
 # File names
 EXEC = test
@@ -12,7 +13,8 @@ OBJECTS = $(SOURCES:.cpp=.o)
 
 # Main target
 $(EXEC): $(OBJECTS)
-	$(CC) $(OBJECTS) -o $(EXEC)
+	(cd ../src/minisat/core; make)
+	$(CC) $(OBJECTS) ../src/minisat/core/Solver.o -o $(EXEC)
 
 # To obtain object files
 %.o: %.cpp
@@ -20,4 +22,4 @@ $(EXEC): $(OBJECTS)
 
 # To remove generated files
 clean:
-	rm -f $(EXEC) $(OBJECTS)
+	rm -f $(EXEC) $(OBJECTS) ../src/minisat/core/*.o ../src/minisat/utils/*.o ../src/minisat/core/depend.mk ../src/minisat/core/minisat
