Implemented search using hackish techniques

--- a/csp_model.mzn.template
+++ b/csp_model.mzn.template
@@ -70,7 +70,7 @@ constraint sum (s in Servers) (bool2int(on[s]) * servers[s, sram]) >=
 
 % ------------------------------------------------------------------------------
 
-$num_servers_constraint
+constraint (sum (s in Servers) (bool2int(on[s]))) == {num_servers};
 
 solve satisfy;
 
